# 41014-sensors-and-control

./: CMakeLists.txt  README.md  package.xml
.devcontainer/: .bash_aliases  Dockerfile  devcontainer.json
aruco_markers/marker_0/: model.sdf
aruco_markers/marker_1/: model.sdf
aruco_markers/marker_2/: model.sdf
aruco_markers/marker_3/: model.sdf
aruco_markers/marker_4/: model.sdf
aruco_markers/marker_5/: model.sdf
launch/: custom_nav.launch  follow.launch  guide_teleop.launch  office.launch  simulation.launch  track.launch  track_single.launch
launch/include/: fetch.launch.xml
models/: turtlebot_with_marker.urdf.xacro
models/aruco_markers/marker_0/: model.sdf
models/aruco_markers/marker_1/: model.sdf
models/aruco_markers/marker_2/: model.sdf
models/aruco_markers/marker_3/: model.sdf
models/aruco_markers/marker_4/: model.sdf
models/fiducial/: model.config  model.sdf
models/marker_0/: model.sdf
models/marker_10/: model.config  model.sdf
models/marker_6/: model.config  model.sdf
models/marker_7/: model.config  model.sdf
models/marker_8/: model.config  model.sdf
models/person_fiducial/: model.config  model.sdf
rviz/: config.rviz
scripts/: fetch_gaze  spawn_marker_on_robot
sensors-and-control/: CMakeLists.txt  package.xml
sensors-and-control-gazebo/: CMakeLists.txt  package.xml
sensors-and-control-gazebo/launch/: simulation.launch  track_single.launch
sensors-and-control-gazebo/worlds/: empty.world
src/: attach.cpp  follow.cpp  tilt_head.cpp
worlds/: empty.world  office_with_actor.sdf  test.world
(+6 files in other folders)
