<?xml version="1.0"?>
<package format="2">
  <name>sensors_and_control</name>
  <version>0.1.0</version>
  <description>
    This is a robotic project serving the sensors and control subject.
  </description>
  <license>MIT</license>
  <author email="timmaxgibson@gmail.com">Timothy Gibson</author>
  <maintainer email="timmaxgibson@gmail.com">Timothy Gibson</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- 
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_example</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>
  <exec_depend>turtlebot3_slam</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>
-->

  <export>
    <metapackage />
  </export>

</package>
